GNOME Bugzilla – Bug 602118
Wrong encoding for users of the lib in non UTF-8 system
Last modified: 2009-11-17 14:52:46 UTC
Many strings fail on non UTF-8 system when displaying the window from gnome-phone-manager to select BT phone: (gnome-phone-manager:21028): Gtk-WARNING **: Failed to set text from markup due to error parsing markup: Erreur à la ligne 1, caractère 66 : Texte codé en UTF-8 non valide dans le nom - « Afficher seulement les p\xe9riph\xe9riques Bluetooth avec... » est non valide (gnome-phone-manager:21028): Gtk-WARNING **: Invalid input string (gnome-phone-manager:21028): Gtk-WARNING **: Invalid input string (gnome-phone-manager:21028): Pango-WARNING **: Invalid UTF-8 string passed to pango_layout_set_text() (gnome-phone-manager:21028): Gtk-WARNING **: Invalid input string (gnome-phone-manager:21028): Pango-WARNING **: Invalid UTF-8 string passed to pango_layout_set_text() This is because gnome-bluetooth lib uses gnome-bluetooth2 as domain and nothing calls bind_textdomain_codeset on this domain. I have a patch to fix bluetooth_chooser by adding the call in bluetooth_chooser_init but other parts of the libs probably need the same fix.
Created attachment 147910 [details] [review] Patch adding the call to bind_textdomain_codeset
Hmm my patch is wrong, it would be more efficient to do it only in class init and not in _init
Created attachment 147912 [details] [review] Add call to bind_textdomain_codeset