Initialize codeset for users of bluetooth_chooser

Signed-off-by: Pascal Terjan <pterjan@linuxfr.org>

https://bugzilla.gnome.org/show_bug.cgi?id=602118